--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<id>Welcome to the world of Web development</id>
+	</div>
 	
 
 
