--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-		<id>Welcome to the world of Web development</id>
+	<div id = "text">
+		Welcome to the world of Web development
 	</div>
 	
 
